login page font size fix and demographic page field alignement

--- a/pre-registration-ui/src/app/feature/demographic/demographic/demographic.component.css
+++ b/pre-registration-ui/src/app/feature/demographic/demographic/demographic.component.css
@@ -137,6 +137,7 @@ mat-icon {
 
 .user__age-or-date > div {
   width: 33.3%;
+  margin-left: 20px;
 }
 
 .user__date {
@@ -177,7 +178,7 @@ mat-icon {
 .user__dob__error {
   left: 3px;
   position: relative;
-  top: -15px;
+  top: -20px;
   font-size: 75%;
   margin-bottom: -12px;
 }
@@ -324,7 +325,7 @@ mat-icon {
     width: 37%;
   }
 }
-@media (min-width: 799px) and (max-width: 1299px){
+@media (min-width: 801px) and (max-width: 1299px){
   .champs {
     padding: 0rem 0 0 16.2rem;
     font-size: 11px;
@@ -434,42 +435,42 @@ mat-icon {
   left: -38px;
   height: 100% !important;
   top: 10px;
-}
-.user__genderAndForeigner{
+  }
+  .user__genderAndForeigner{
   margin-top: -2px;
-}
-.user__btn{
+  }
+  .user__btn{
   margin: 5px 1px 4px 7rem;
   font-size: 0.7rem;
-}
-.user__pref{
+  }
+  .user__pref{
   position: relative;
   left: -252px;
   top: 51px;
-}
-.user__age--years{
+  }
+  .user__age--years{
   position: relative;
   left: 11px;
   top: 10px !important;
-}
-.user__age{
+  }
+  .user__age{
   position: relative;
   left: -180px;
   top: 61px;
-}
-.user__age-or-date{
+  }
+  .user__age-or-date{
   width: 336px;
   margin-bottom: 80px;
-}
-.col-50{
+  }
+  .col-50{
   width: 100%;
-}
-.posmobile{
+  }
+  .posmobile{
   margin-top: -6px !important;
-}
-.champs{
+  }
+  .champs{
   padding: 0rem 0 0 12rem;
-}
+  }
 }
 .hidedesk{
   display: block;
