--- a/pre-registration-ui/src/styles.css
+++ b/pre-registration-ui/src/styles.css
@@ -189,6 +189,7 @@ body {
 
 .mat-error {
   color: #e44c29;
+  margin-top: -1px;
 }
 
 .mat-slide-toggle .mat-slide-toggle-thumb {
